Fix linter issues in which wasn't displayed locally.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -10,3 +10,8 @@ linters:
     - goimports
     - gocyclo
     - revive
+    - typecheck
+
+issues:
+  exclude-use-default: false
+  exclude-rules: []
