--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.21' # Change to your Go version
+          go-version: '1.24.3'
 
       - name: Cache Go modules
         uses: actions/cache@v4
@@ -33,7 +33,7 @@ jobs:
       - name: Install golangci-lint
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh \
-            | sh -s -- -b $(go env GOPATH)/bin v1.58.2
+            | sh -s -- -b $(go env GOPATH)/bin v1.64.8
         shell: bash
 
       - name: Run golangci-lint
