Disables package-comments check in revive linter
Disables the `package-comments` rule in the `revive` linter configuration.

This reduces the number of vague and unactionable comments required by the linter, improving code clarity and maintainability.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -12,6 +12,12 @@ linters:
     - revive
     - typecheck
 
+linters-settings:
+  revive:
+    rules:
+      - name: package-comments
+        disabled: true
+
 issues:
   exclude-use-default: false
   exclude-rules: []
