Adds VS Code debugging configurations
Introduces VS Code launch and task configurations for running and debugging the application, including configurations for running with a Docker-based database.

Also updates .gitignore to exclude .env.dev and clarifies scheduler configuration comments in .env.example.

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,6 @@ EMAIL_FROM_ADDRESS=your_gmail_username@gmail.com
 # Application URL (used for email links)
 APP_URL=http://localhost:8080
 
-# Scheduler configuration
-HOURLY_INTERVAL=60    # in minutes
-DAILY_INTERVAL=1440   # in minutes
+# Scheduler configuration in minutes
+HOURLY_INTERVAL=60
+DAILY_INTERVAL=1440
