Add tasks from GoF homework.
1. Few weather provides with ability to choose from chain of providers if some of them fail using Chain of Responsibility
2. Caching responses from providers using Proxy
3. Logging responses using Decorator

--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,20 @@ DB_SSL_MODE=disable
 SERVER_PORT=8080
 
 # Weather API configuration
+# Primary provider (WeatherAPI.com)
 WEATHER_API_KEY=your_weatherapi_com_key
 WEATHER_API_BASE_URL=https://api.weatherapi.com/v1
+
+# Additional weather providers (optional)
+OPENWEATHERMAP_API_KEY=your_openweathermap_key
+ACCUWEATHER_API_KEY=your_accuweather_key
+
+# Weather provider settings
+WEATHER_PROVIDER_ORDER=weatherapi,openweathermap,accuweather
+WEATHER_ENABLE_CACHE=true
+WEATHER_ENABLE_LOGGING=true
+WEATHER_CACHE_TTL_MINUTES=10
+WEATHER_LOG_FILE_PATH=logs/weather_providers.log
 
 # Gmail SMTP Email service configuration
 EMAIL_SMTP_HOST=smtp.gmail.com
