Add caching using redis.

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,16 @@ WEATHER_ENABLE_LOGGING=true
 WEATHER_CACHE_TTL_MINUTES=10
 WEATHER_LOG_FILE_PATH=logs/weather_providers.log
 
+# Cache configuration
+CACHE_TYPE=memory
+# Redis cache settings (used when CACHE_TYPE=redis)
+REDIS_ADDR=localhost:6379
+REDIS_PASSWORD=
+REDIS_DB=0
+REDIS_DIAL_TIMEOUT=5
+REDIS_READ_TIMEOUT=3
+REDIS_WRITE_TIMEOUT=3
+
 # Gmail SMTP Email service configuration
 EMAIL_SMTP_HOST=smtp.gmail.com
 EMAIL_SMTP_PORT=587
