--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       - "8080:8080"
     depends_on:
       - db
+      - redis
     env_file:
       - .env
     environment:
@@ -17,6 +18,10 @@ services:
       - SERVER_PORT=8080
       - EMAIL_SMTP_HOST=smtp.gmail.com
       - EMAIL_SMTP_PORT=587
+      - CACHE_TYPE=redis
+      - REDIS_ADDR=redis:6379
+      - REDIS_PASSWORD=
+      - REDIS_DB=0
     restart: unless-stopped
     networks:
       - app-network
@@ -35,8 +40,20 @@ services:
     networks:
       - app-network
 
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+    restart: unless-stopped
+    networks:
+      - app-network
+
 volumes:
   postgres_data:
+  redis_data:
 
 networks:
   app-network:
