--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,9 @@ WEATHER_API_BASE_URL=https://api.weatherapi.com/v1
 
 # Additional weather providers (optional)
 OPENWEATHERMAP_API_KEY=your_openweathermap_key
+OPENWEATHERMAP_API_BASE_URL=https://api.openweathermap.org/data/2.5
 ACCUWEATHER_API_KEY=your_accuweather_key
+ACCUWEATHER_API_BASE_URL=http://dataservice.accuweather.com/currentconditions/v1
 
 # Weather provider settings
 WEATHER_PROVIDER_ORDER=weatherapi,openweathermap,accuweather
