Fix mock generation.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -41,6 +41,9 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-e2e-
 
+    - name: Generate mocks
+      run: make -f Makefile.mocks mocks
+
     - name: Setup E2E test environment
       run: make -f Makefile.testing _e2e-setup
 
