--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -25,5 +25,8 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-integration-
 
+    - name: Generate mocks
+      run: make -f Makefile.mocks mocks
+
     - name: Run integration tests
       run: make -f Makefile.testing test-integration
