--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -25,6 +25,9 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-1.24-
 
+    - name: Generate mocks
+      run: make -f Makefile.mocks mocks
+
     - name: Run unit tests
       run: |
         make -f Makefile.testing test-unit
