--- a/Makefile.testing
+++ b/Makefile.testing
@@ -180,7 +180,7 @@ _e2e-setup:
 		sleep 3; \
 	done
 	@echo "$(YELLOW)Building and starting application...$(NC)"
-	@go build -o weatherapi main.go
+	@go build -o weatherapi ./cmd/app
 	@APP_BASE_URL="http://localhost:8080" \
 	DATABASE_URL="postgres://e2e_user:e2e_pass@localhost:5434/weatherapi_e2e?sslmode=disable" \
 	EMAIL_SMTP_HOST="localhost" \
