--- a/Makefile.testing
+++ b/Makefile.testing
@@ -46,14 +46,18 @@ test-unit:
 # Integration Tests - With auto setup/cleanup
 test-integration: _check-docker _integration-setup
 	@echo "$(GREEN)Running integration tests...$(NC)"
-	@trap 'make _integration-cleanup' EXIT; \
+	@set -e; \
+	ROOT_DIR=$$(pwd); \
+	trap "cd $$ROOT_DIR && make -f Makefile.testing _integration-cleanup" EXIT; \
 	go test -v -timeout=$(TIMEOUT) $(INTEGRATION_PACKAGES)
 	@echo "$(GREEN)Integration tests completed$(NC)"
 
 # E2E Tests - With auto setup/cleanup
 test-e2e: _check-docker _check-node _e2e-setup
 	@echo "$(GREEN)Running E2E tests...$(NC)"
-	@trap 'make _e2e-cleanup' EXIT; \
+	@set -e; \
+	ROOT_DIR=$$(pwd); \
+	trap "cd $$ROOT_DIR && make -f Makefile.testing _e2e-cleanup" EXIT; \
 	cd tests/e2e && npm test
 	@echo "$(GREEN)E2E tests completed$(NC)"
 
@@ -181,16 +185,27 @@ _e2e-setup:
 	done
 	@echo "$(YELLOW)Building and starting application...$(NC)"
 	@go build -o weatherapi ./cmd/app
-	@APP_BASE_URL="http://localhost:8080" \
-	DATABASE_URL="postgres://e2e_user:e2e_pass@localhost:5434/weatherapi_e2e?sslmode=disable" \
+	@APP_URL="http://localhost:8080" \
+	DB_HOST="localhost" \
+	DB_PORT="5434" \
+	DB_USER="e2e_user" \
+	DB_PASSWORD="e2e_pass" \
+	DB_NAME="weatherapi_e2e" \
+	DB_SSL_MODE="disable" \
 	EMAIL_SMTP_HOST="localhost" \
 	EMAIL_SMTP_PORT="1026" \
 	EMAIL_SMTP_USERNAME="test" \
 	EMAIL_SMTP_PASSWORD="test" \
+	EMAIL_FROM_ADDRESS="test@example.com" \
 	WEATHER_API_KEY="test-key" \
+	OPENWEATHERMAP_API_KEY="test-key" \
+	ACCUWEATHER_API_KEY="test-key" \
 	WEATHER_API_BASE_URL="http://localhost:8082" \
+	OPENWEATHERMAP_API_BASE_URL="http://localhost:8082" \
+	ACCUWEATHER_API_BASE_URL="http://localhost:8082" \
+	CACHE_TYPE="memory" \
 	GIN_MODE="release" \
-	./weatherapi > /dev/null 2>&1 & echo $$! > weatherapi.pid
+	./weatherapi & echo $$! > weatherapi.pid
 	@echo "$(YELLOW)Waiting for application...$(NC)"
 	@for i in $$(seq 1 15); do \
 		if curl -f http://localhost:8080/api/debug >/dev/null 2>&1; then \
